5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1602_2895.log
== TEST (2019-03-20 18:56:17) 
-- CODE:
var= float(input()
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45+(var*8)

# Impressao do valor total:
print(total)
-- OUTPUT:
141.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var)=frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (quantidade*var)=frete
           ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var)=fretefrete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (quantidade*var)=fretefrete
           ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var)+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var)+frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var) + frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
frete=float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var) + frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:05:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
frete=float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.177682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 8, in <module>
    total = (quantidade*var) + frete
NameError: name 'quantidade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quntidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
frete=float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var)+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (quantidade*var)+frete
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
frete=float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:06:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
quantidade= int(input("A quantidade de jogos a serem encomendados? "))
# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))
frete=float(input("O valor do frete "))
# Calculo do valor a ser pago, incluindo o frete:
total = (quantidade*var) + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.120042
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
